--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.4"
     }
 }
